<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/relativeLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MenuOption">

    <TextView
            android:id="@+id/textVerifying"
            android:background="@color/colorPrimary"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:textColor="#fff"
            android:textSize="15sp"
            android:padding="10dp"
            android:gravity="center"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"/>

    <Button
            android:id="@+id/btnFromOs"
            android:layout_marginTop="20dp"
            android:layout_below="@+id/textVerifying"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:text="@string/from_sys"/>
    <Button
            android:id="@+id/btnCallFromServer"
            android:layout_below="@+id/btnFromOs"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:text="@string/callFromServer"/>

    <Button
            android:id="@+id/btnSendSmsToServer"
            android:layout_below="@+id/btnCallFromServer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:text="@string/smsToServer"/>
    <Button
            android:id="@+id/btnReceiveSmsFromServer"
            android:layout_below="@+id/btnSendSmsToServer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:text="@string/smsFromServer"/>
    <Button
            android:id="@+id/btnSend"
            android:layout_below="@+id/btnReceiveSmsFromServer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:text="@string/selfSms"/>
    <Button
            android:id="@+id/btnCallToSever"
            android:layout_below="@+id/btnSend"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:text="@string/callToServer"/>


</RelativeLayout>